--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
             <main>
                 <div class="container_todos">
                     <ul class="todos_list" v-if="todos.length > 0">
-                        <li v-for="(todo, index) in todos" :key="index">{{todo}}<i class="fas fa-times pointer" @click="removeTodo(index)"></i></li>
+                        <li v-for="(todo, index) in todos" :key="index" :class="done(todo.checked, index)">
+                            <input type="checkbox" class="pointer" v-model="todo.checked">
+                            {{todo.task}}
+                            <i class="fas fa-times pointer" @click="removeTodo(index)"></i>
+                        </li>
                     </ul>
                     <h2 v-else>Non ci sono todo!</h2>
                 </div>
