--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <main>
                 <div class="container_todos">
                     <ul class="todos_list" v-if="todos.length > 0">
-                        <li v-for="(todo, index) in todos" :key="index" :class="done(todo.checked, index)">
+                        <li v-for="(todo, index) in todos" :key="index" :class="done(todo.checked)">
                             <input type="checkbox" class="pointer" v-model="todo.checked">
-                            {{todo.task}}
+                            <span>{{todo.task}}</span> 
                             <i class="fas fa-times pointer" @click="removeTodo(index)"></i>
                         </li>
                     </ul>
